--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<link rel="icon" href="../bigbasket.png">
+<link rel="icon" href="bigbasket.png">
     <link rel="stylesheet" href="./script.css">
     <title> Online Grocery Shopping and Online Supermarket in India</title>
     <script src="https://kit.fontawesome.com/b1d46612bd.js" crossorigin="anonymous"></script>
@@ -34,7 +34,7 @@
 </nav>
 <section-1>
     <div>
-        <img src="../bigbasket/tajmahal.webp" class="image">
+        <img src="tajmahal.webp" class="image">
     </div>
 
     <div class="flex-2">
@@ -212,13 +212,13 @@
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner container">
           <div class="carousel-item active">
-            <img src="../bigbasket/hp_m_babycare_250923_400.webp" class="d-block w-100" alt="..." >
+            <img src="hp_m_babycare_250923_400.webp" class="d-block w-100" alt="..." >
           </div>
           <div class="carousel-item">
-            <img src="../bigbasket/hp_bcd_m_bcd_250923_400.webp"class="d-block w-100" alt="...">
+            <img src="hp_bcd_m_bcd_250923_400.webp"class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../bigbasket/hp_m_petstore_250923_400.webp" class="d-block w-100" alt="...">
+            <img src="hp_m_petstore_250923_400.webp" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
